--- a/buf.yaml
+++ b/buf.yaml
@@ -13,6 +13,27 @@ lint:
     - PACKAGE_AFFINITY
     - PACKAGE_DIRECTORY_MATCH
     - PACKAGE_SAME_DIRECTORY
+  ignore_only:
+    DIRECTORY_SAME_PACKAGE:
+      - msp/identities.proto
+      - msp/msp_config.proto
+      - msp/msp_principal.proto
+    FIELD_LOWER_SNAKE_CASE:
+      - common/ledger.proto
+      - gateway.proto
+      - gossip/message.proto
+      - peer/chaincode_shim.proto
+      - peer/lifecycle/db.proto
+      - peer/proposal.proto
+      - peer/transaction.proto
+    ONEOF_LOWER_SNAKE_CASE:
+      - common/policies.proto
+      - orderer/ab.proto
+      - orderer/kafka.proto
+      - peer/events.proto
+      - peer/lifecycle/db.proto
+      - peer/lifecycle/lifecycle.proto
+      - peer/policy.proto
 breaking:
   use:
     - WIRE_JSON
