Initial Rust crate
Signed-off-by: James Taylor <jamest@uk.ibm.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
-gen/
+/fabric-gateway-protos-rust/target
+/fabric-gateway-protos-rust/Cargo.lock
+/fabric-gateway-protos-rust/src/**/*.rs
+!/fabric-gateway-protos-rust/src/lib.rs
