Update rust crate
Signed-off-by: James Taylor <jamest@uk.ibm.com>

--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -10,6 +10,8 @@ plugins:
     strategy: all
   - name: rust
     out: fabric-protos-rust/src
+  - name: rust-grpc
+    out: fabric-protos-rust/src
   - name: js
     out: fabric-protos-node
     opt:
