--- a/fabric-protos-rust/Cargo.toml
+++ b/fabric-protos-rust/Cargo.toml
@@ -13,4 +13,7 @@ repository = "https://github.com/jt-nti/fabric-protos-bindings"
 edition = "2018"
 
 [dependencies]
-protobuf = "2.17.0"
+grpc = "0.8.3"
+grpc-protobuf = "0.8.3"
+protobuf = "~2.18.2"
+protoc-rust = "~2.18.2"
